--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@ h3 {
   <div class="caption"> <span class="border">&nbsp; DON'T SCROLL&nbsp;&nbsp;</span> </div>
 </div>
 <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-  <h3 style="text-align:center;">WELCOME TO MY WEBSITE</h3>
-  <p>Ola and Ola</p>
+  <h3 style="text-align:center;">BYE</h3>
+  <p>life is fun, isn't it</p>
 </div>
 <div class="bgimg-2">
-  <div class="caption"> <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span> </div>
+  <div class="caption"> <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">ARE YOU OK?</span> </div>
 </div>
 <div style="position:relative;">
   <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
-    <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+    <p>AMAZINGGGGGGGG</p>
   </div>
 </div>
 <div class="bgimg-3">
-  <div class="caption"> <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span> </div>
+  <div class="caption"> <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">XD</span> </div>
 </div>
 <div style="position:relative;">
   <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
@@ -86,7 +86,7 @@ h3 {
   </div>
 </div>
 <div class="bgimg-1">
-  <div class="caption"> <span class="border">COOL!</span> </div>
+  <div class="caption"> <span class="border">YOU'RE COOL!</span> </div>
 </div>
 </body>
 </html>
